--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "glob2" %}
-{% set version = "0.5" %}
+{% set version = "0.6" %}
 
 package:
   name: {{ name }}
@@ -7,11 +7,11 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://github.com/miracle2k/python-glob2/archive/v{{ version }}.tar.gz
-  sha256: dea12519a27949c2aa3a14f557d08847debfeae0be58e29391ee1d9ceed80174
+  url: https://github.com/miracle2k/python-glob2/archive/{{ version }}.tar.gz
+  sha256: 4f554074f242f01b48a9537409cdbc5e31355a06b51950c95f93fc061c324149
 
 build:
-  number: 1
+  number: 0
   script: python setup.py install --single-version-externally-managed --record=record.txt
 
 requirements:
@@ -28,6 +28,7 @@ test:
 about:
   home: https://github.com/miracle2k/python-glob2
   license: BSD-2-Clause
+  license_family: BSD
   license_file: LICENSE
   summary: Version of the glob module that supports recursion via **, and can capture patterns.
   
